- Ability to copy all User Info to clipboard in "User Info" dialog
- Ability to sort Ban List
- Ability to hide some elements of main window
- Ability to reorder column of "User Accounts" and "Online Users" dialog
- Ability to search by IP or username in "Banned Users" dialog
- Ability to show password on login error, channel password, channel operator password, and channel share
- Single dialog to enter username and password on login error and channel share
- Support for Import/Export entire Server List in "Connect to a Server" dialog
- Support Idle Time on Linux (X11)
- Support Qt Accessibility Announcement for TTS events on MacOS and Windows (Qt 6.8)
- Removed option "Announce server name" from TTS options, use customizable messages instead
- Optional sound event for user typing private message
- Only show available info in "User Info" dialog
- "Voice level" progress bar in Main Window can now get focus
- Transfer progress bar in "File Transfer" dialog can now get focus
- Locale file size now also use in "File Transfer" dialog
- Reset label of files list when disconnected from server
- Support VoiceOver for TTS events using Apple Script
- Fixed labels of edit fields in "Custom Video Format" dialog
- Local date time now also use in "About" dialog
- Ban time displays in local format
- Windows installer translatable
- Windows and macOS updated to Qt v6.8.0-beta1
Android Client
- Toggle channel operator does not show password dialog if user has user-right to change channel operator
iOS Client
-
Server
-

Version 5.16.1, 2024/04/16
Default Qt Client
- Fixed issue where initial sound event was played over and over again

Version 5.16, 2024/04/08
Default Qt Client
- Dates and times are now formatted in user locale on "User accounts" dialog and main window's files tab
- Option to show server's message of the day in a welcome dialog box
- Option to announce server name on some server related TTS events
- Option to show channel topic in channel list